Related: tdf#137871 GetTextEditOutlinerView returns null in a table

Change-Id: Ic27f41e6e2dd7fd65fdae8477ef314f1df83819f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/105041
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>